syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.analytics.spaces.client.api.splnav";

package com.glance.analytics.spaces.client.api.splnav;

// Interactible elements related to settings
message SettingsElement {
  oneof element {
    SettingsMenu settings_menu = 1;
    SettingsMenu.MenuItem menu_item = 2;
    SettingsItem settings_item = 3;
  }

  enum SettingsItem {
    UNKNOWN = 0;
    ENABLE_GLANCE_TOGGLE = 1;
    DATA_USAGE = 2;
    TERMS_N_CONDITIONS = 3;
    PRIVACY_POLICY = 4;
    PRIVACY_SETTINGS = 5;
    THIRD_PARTY_LIBRARIES = 6;
  }
}

message SettingsMenu {
  repeated MenuItem menu_items = 1;
  enum MenuItem {
    UNKNOWN = 0;
    SETTINGS = 1;
    SHARE_FEEDBACK = 2;
  }
}
